--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Simple To-Do Filter</title>
-  <meta name="description" content="A simple to-do filter app (Work, School, Personal) — semantic HTML, CSS, and JS." />
+  <meta name="description" content="A simple to-do filter app (Work, School, Personal) - semantic HTML, CSS, and JS." />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
       <h1>My To-Do List</h1>
-      <p class="tagline">Filter tasks by category — Work, School, Personal. Nice and simple.</p>
+      <p class="tagline">Filter tasks by Work, School, and Personal tasks. Nice and simple.</p>
     </div>
   </header>
 
