--- a/index.html
+++ b/index.html
@@ -45,47 +45,47 @@
         <li class="card" data-category="work">
           <article>
             <header>
-              <h3>Prepare project status report</h3>
+              <h3>Close group study rooms</h3>
               <p class="meta">Due: 2025-10-25 · <span class="category">Work</span></p>
             </header>
-            <p>Compile metrics and send to the team before Friday standup.</p>
+            <p>Clean white boards, turn off lights and lock room doors.</p>
           </article>
         </li>
 
         <li class="card" data-category="school">
           <article>
             <header>
-              <h3>Read Chapter 6 — Innovator's Dilemma</h3>
+              <h3>Read Chapter 4 ITMD 517</h3>
               <p class="meta">Due: 2025-10-26 · <span class="category">School</span></p>
             </header>
-            <p>Take notes on organizational culture and innovation for assignment.</p>
+            <p>Read and take notes on chapter 4 .</p>
           </article>
         </li>
 
         <li class="card" data-category="personal">
           <article>
             <header>
-              <h3>Buy cat food</h3>
+              <h3>Buy dog food</h3>
               <p class="meta">No due date · <span class="category">Personal</span></p>
             </header>
-            <p>Pick up the recommended brand from the grocery store.</p>
+            <p>Pick up oso's dog food at the pet store.</p>
           </article>
         </li>
 
         <li class="card" data-category="work">
           <article>
             <header>
-              <h3>Review server logs</h3>
+              <h3>Review bookings</h3>
               <p class="meta">Due: 2025-10-24 · <span class="category">Work</span></p>
             </header>
-            <p>Check for errors and summarize findings for the Ops meeting.</p>
+            <p>Check for group study room bookings.</p>
           </article>
         </li>
 
         <li class="card" data-category="school">
           <article>
             <header>
-              <h3>Submit Cybercrime paper draft</h3>
+              <h3>Submit Cyber security paper </h3>
               <p class="meta">Due: 2025-10-30 · <span class="category">School</span></p>
             </header>
             <p>Ensure at least 3 academic sources are included.</p>
@@ -98,7 +98,7 @@
               <h3>Call Mom</h3>
               <p class="meta">No due date · <span class="category">Personal</span></p>
             </header>
-            <p>Catch up and wish her a happy week.</p>
+            <p>Catch up, and check in with her.</p>
           </article>
         </li>
       </ul>
@@ -108,7 +108,7 @@
   </main>
 
   <footer class="site-footer container" role="contentinfo">
-    <p>Made with semantic HTML, CSS, and JavaScript for class demo.</p>
+    <p>Made for ITMD 543 class :) .</p>
     <p><small>Tip: try unchecking all categories to see the empty state.</small></p>
   </footer>
 
