--- a/index.html
+++ b/index.html
@@ -40,8 +40,40 @@
     <section aria-labelledby="active-heading" class="task-list">
       <h2 id="active-heading">Tasks</h2>
 
+      <!-- ✨ NEW TASK FORM -->
+      <form id="addTaskForm" class="add-task-form">
+        <h3>Add a New Task</h3>
+        <label>
+          Title:
+          <input type="text" id="title" placeholder="Enter task name" required />
+        </label>
+
+        <label>
+          Due Date:
+          <input type="date" id="dueDate" />
+        </label>
+
+        <label>
+          Category:
+          <select id="category" required>
+            <option value="">Select Category</option>
+            <option value="work">Work</option>
+            <option value="school">School</option>
+            <option value="personal">Personal</option>
+          </select>
+        </label>
+
+        <label>
+          Description:
+          <textarea id="description" placeholder="Short details..." rows="2"></textarea>
+        </label>
+
+        <button type="submit">Add Task</button>
+      </form>
+      <!-- ✨ END NEW TASK FORM -->
+
       <ul id="tasks" class="cards" role="list">
-        <!-- Each task is an <li> with semantic article inside. -->
+        <!-- Your starter tasks remain the same -->
         <li class="card" data-category="work">
           <article>
             <header>
@@ -58,7 +90,7 @@
               <h3>Read Chapter 4 ITMD 517</h3>
               <p class="meta">Due: 2025-10-26 · <span class="category">School</span></p>
             </header>
-            <p>Read and take notes on chapter 4 .</p>
+            <p>Read and take notes on chapter 4.</p>
           </article>
         </li>
 
@@ -68,7 +100,7 @@
               <h3>Buy dog food</h3>
               <p class="meta">No due date · <span class="category">Personal</span></p>
             </header>
-            <p>Pick up oso's dog food at the pet store.</p>
+            <p>Pick up Oso's dog food at the pet store.</p>
           </article>
         </li>
 
@@ -85,7 +117,7 @@
         <li class="card" data-category="school">
           <article>
             <header>
-              <h3>Submit Cyber security paper </h3>
+              <h3>Submit Cybersecurity paper</h3>
               <p class="meta">Due: 2025-10-30 · <span class="category">School</span></p>
             </header>
             <p>Ensure at least 3 academic sources are included.</p>
@@ -98,7 +130,7 @@
               <h3>Call Mom</h3>
               <p class="meta">No due date · <span class="category">Personal</span></p>
             </header>
-            <p>Catch up, and check in with her.</p>
+            <p>Catch up and check in with her.</p>
           </article>
         </li>
       </ul>
@@ -108,7 +140,7 @@
   </main>
 
   <footer class="site-footer container" role="contentinfo">
-    <p>Made for ITMD 543 class :) .</p>
+    <p>Made for ITMD 543 class :)</p>
     <p><small>Tip: try unchecking all categories to see the empty state.</small></p>
   </footer>
 
