--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="container">
       <h1>My To-Do List</h1>
-      <p class="tagline">Filter tasks by Work, School, and Personal tasks. Nice and simple.</p>
+      <p class="tagline">Filter, add, and complete tasks by category — Work, School, or Personal.</p>
     </div>
   </header>
 
@@ -40,43 +40,29 @@
     <section aria-labelledby="active-heading" class="task-list">
       <h2 id="active-heading">Tasks</h2>
 
-      <!-- ✨ NEW TASK FORM -->
+      <!-- Add Task Form -->
       <form id="addTaskForm" class="add-task-form">
         <h3>Add a New Task</h3>
-        <label>
-          Title:
-          <input type="text" id="title" placeholder="Enter task name" required />
-        </label>
-
-        <label>
-          Due Date:
-          <input type="date" id="dueDate" />
-        </label>
-
-        <label>
-          Category:
-          <select id="category" required>
-            <option value="">Select Category</option>
+        <div class="form-group">
+          <input type="text" id="taskTitle" placeholder="Task Title" required />
+          <input type="date" id="taskDue" />
+          <select id="taskCategory" required>
+            <option value="">Category</option>
             <option value="work">Work</option>
             <option value="school">School</option>
             <option value="personal">Personal</option>
           </select>
-        </label>
-
-        <label>
-          Description:
-          <textarea id="description" placeholder="Short details..." rows="2"></textarea>
-        </label>
-
-        <button type="submit">Add Task</button>
+        </div>
+        <textarea id="taskDesc" placeholder="Task Description" rows="2"></textarea>
+        <button type="submit" class="add-btn">Add Task</button>
       </form>
-      <!-- ✨ END NEW TASK FORM -->
 
       <ul id="tasks" class="cards" role="list">
-        <!-- Your starter tasks remain the same -->
+        <!-- Sample Tasks -->
         <li class="card" data-category="work">
           <article>
             <header>
+              <input type="checkbox" class="complete-task" title="Mark complete" />
               <h3>Close group study rooms</h3>
               <p class="meta">Due: 2025-10-25 · <span class="category">Work</span></p>
             </header>
@@ -87,6 +73,7 @@
         <li class="card" data-category="school">
           <article>
             <header>
+              <input type="checkbox" class="complete-task" title="Mark complete" />
               <h3>Read Chapter 4 ITMD 517</h3>
               <p class="meta">Due: 2025-10-26 · <span class="category">School</span></p>
             </header>
@@ -97,40 +84,11 @@
         <li class="card" data-category="personal">
           <article>
             <header>
+              <input type="checkbox" class="complete-task" title="Mark complete" />
               <h3>Buy dog food</h3>
               <p class="meta">No due date · <span class="category">Personal</span></p>
             </header>
             <p>Pick up Oso's dog food at the pet store.</p>
-          </article>
-        </li>
-
-        <li class="card" data-category="work">
-          <article>
-            <header>
-              <h3>Review bookings</h3>
-              <p class="meta">Due: 2025-10-24 · <span class="category">Work</span></p>
-            </header>
-            <p>Check for group study room bookings.</p>
-          </article>
-        </li>
-
-        <li class="card" data-category="school">
-          <article>
-            <header>
-              <h3>Submit Cybersecurity paper</h3>
-              <p class="meta">Due: 2025-10-30 · <span class="category">School</span></p>
-            </header>
-            <p>Ensure at least 3 academic sources are included.</p>
-          </article>
-        </li>
-
-        <li class="card" data-category="personal">
-          <article>
-            <header>
-              <h3>Call Mom</h3>
-              <p class="meta">No due date · <span class="category">Personal</span></p>
-            </header>
-            <p>Catch up and check in with her.</p>
           </article>
         </li>
       </ul>
@@ -141,7 +99,7 @@
 
   <footer class="site-footer container" role="contentinfo">
     <p>Made for ITMD 543 class :)</p>
-    <p><small>Tip: try unchecking all categories to see the empty state.</small></p>
+    <p><small>Tip: Try adding your own tasks!</small></p>
   </footer>
 
   <script src="script.js" defer></script>
