--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <p><small>Tip: Try adding your own tasks!</small></p>
   </footer>
 
+  <!-- JavaScript -->
   <script src="script.js" defer></script>
 </body>
 </html>
