--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="container">
       <h1>My To-Do List</h1>
-      <p class="tagline">Filter, add, and complete tasks by category — Work, School, or Personal.</p>
+      <p class="tagline">Filter, add, and complete tasks by the following categorys, Work, School, or Personal.</p>
     </div>
   </header>
 
@@ -77,7 +77,7 @@
               <h3>Read Chapter 4 ITMD 517</h3>
               <p class="meta">Due: 2025-10-26 · <span class="category">School</span></p>
             </header>
-            <p>Read and take notes on chapter 4.</p>
+            <p>Read and take notes on chapter 4 .</p>
           </article>
         </li>
 
